# x735-v2.5-C-

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format-code.sh  install.sh  uninstall.sh  x735-fancontrol.service
src/: CMakeLists.txt  main.cpp
src/FanControl/: CMakeLists.txt  main.cpp
src/FanSpeed/: CMakeLists.txt  main.cpp
