set(TARGET	FanControl)

#######################################################################
# Executable
#######################################################################
add_executable(${TARGET})

target_sources(${TARGET}
	PRIVATE
			main.cpp
)

#######################################################################
# Libraries
#######################################################################
target_link_libraries(${TARGET}
	Gpio
	Boost::system
	pthread
)
